--- a/webapp/src/containers/pages/Login.css
+++ b/webapp/src/containers/pages/Login.css
@@ -1,6 +1,9 @@
+@import '@radix-ui/colors/gray-dark.css';
+
 .Login-card {
   width: 400px;
   padding: 36px 24px 0 24px;
+  background-color: var(--gray-3) !important;
 }
 
 .Login-button {
